# pcdecode

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac
src/: algorithm.c  algorithm.h  complexity.c  complexity.h  complexity_main.c  dbg.c  dbg.h  gen_errors.c  gen_errors.h  lt_errno.c  lt_errno.h  product_code.c  product_code.h  prog_name.c  prog_name.h  rng.c  rng.h  simulate.c  simulate.h  simulate_complexity.c  simulate_complexity.h  simulate_main.c  version.c  version.h
